test/good/functions/variadic08.px

func join(Char... c: [..."empty"]) String def
    return c.join()

print join()
print join('x', 'y')
