test/bad/functions/variadic09.px

func f(...s: String) def
    return
